# test_remotes_for_TV

./: .gitignore  2400lxResults.txt  6200 basım sonucları.txt  CMakeLists.txt  INA238.py  edgeDetect.py  edgeDetectFall.py  graphTestResult.py  i2c_guide.txt  idleTestResults.txt  ina238.cpp  ina238.h  ina238.hpp  irManager.cpp  irManager.hpp  main  main.cpp  main.h  main.hpp  main.py  makefile  readme.md  reportFile.cpp  reportFile.hpp  scope.txt  servoController.cpp  servoController.hpp  servoRemoteTest.py  solarChargeMonitor  testResults.txt  testmest.txt
archieve/: 100lxResults.txt  125lxResults.txt  2V7solarChargeResults.txt  440lxResults.txt  testResults_Haier_solarCharge_1000lx.txt  testResults_Haier_solarCharge_3kLux.txt  testResults_Haier_solarCharge_400lx.txt  testResults_Haier_solarCharge_sun.txt  testResults_Haier_solarCharge_sun_kapali.txt  testResults_haier_solarCharge_100lx.txt  testResults_samsung_solarCharge_100lx.txt  testResults_samsung_solarCharge_3kLux.txt  testResults_samsung_solarCharge_400lx.txt  testResults_samsung_solarCharge_5hour_100lx.txt  testResults_samsung_solarCharge_sun.txt  testResults_samsung_solarCharge_sun_kapali.txt
docs/: i2c_guide.txt  ina238_notes.txt
inc/: batteryChargeMonitoringTest.hpp  batteryVoltageAndButtonTest.hpp  ina238.hpp  ina238config.hpp  irManager.hpp  irSignalValidationTest.hpp  pushAndMeas.hpp  remotetest.hpp  solarCharge.hpp  solarlessIrButtonClick.hpp  testconfig.hpp  testfactory.hpp
inc/gui/: IRSVTsettingsdialog.hpp  hardwaresettings.hpp  mainwindow.hpp  testsettingfactory.hpp
res/ui/: IRSVTsettingsdialog.ui  IRSVTtestsettings.ui  hardwaresettings.ui  mainwindow.ui
src/: batteryChargeMonitoringTest.cpp  batteryVoltageAndButtonTest.cpp  ina238.cpp  irManager.cpp  irSignalValidationTest.cpp  pushAndMeas.cpp  remotetest.cpp  solarCharge.cpp  solarChargeMonitor.cpp  solarlessIrButtonClick.cpp
src/gui/: IRSVTsettingsdialog.cpp  hardwaresettings.cpp  mainwindow.cpp
